crates/retiretui_tui/src/snapshots/retiretui_tui__frames__accounts_item_128x32.snap
---
source: crates/retiretui_tui/src/frames.rs
assertion_line: 45
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────
╭ Plan ─────────────╮╭ Accounts ──────────────────────────────────────────────────────────╮ ╭ Account ─────────────────────────╮
│▏ Accounts       7 ││  Account              Type              Owner           Balance    │ │                                  │
│  Income         4 ││▌ cash                 Cash              jordan          $40,000    │ │▏ ID               cash           │
│  Expenses       2 ││  brokerage            Brokerage         jordan         $300,000    │ │  Name             The ID         │
│  Cliffs         0 ││  fid-401k             401(k)            jordan         $450,000    │ │  Type             Cash           │
│  Transfers      1 ││  roth-ira             IRA               jordan          $90,000    │ │  Owner            jordan         │
│  Conversions    1 ││  rollov╭ Edit cash ──────────────────────────────────────────────────────╮lance          $40,000        │
│  Contributions  3 ││  hsa   │ID                [ cash                                       ] │vested         Fixed return   │
│  Events         1 ││  pensio│Name              [                                            ] │pected return  Earns nothing  │
│  People         2 ││        │Type              [ Cash ▾ ]                                     │cked until     Never          │
│  Residency      1 ││        │Owner             [ jordan ▾ ]                                   │ain priority   Usual order    │
│  Household        ││        │Balance           [ $40,000                                    ] │                              │
│  Settings         ││        │Invested          [ Fixed return ▾ ]                             │                              │
│  Market           ││        │Expected return   █─────────────────── [                       ] │                              │
│                   ││        │Locked until      [ Never ▾ ]                                    │                              │
│                   ││        │Drain priority    [                                            ] │                              │
│                   ││        │─────────────────────────────────────────────────────────────────│                              │
│                   ││        │A short unique handle other items refer to this account by.      │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │─────────────────────────────────────────────────────────────────│                              │
│                   ││        │                                            [ Discard ] [ Apply ]│                              │
│                   ││        ╰─────────────────────────────────────────────────────────────────╯                              │
│                   ││                                                                    │ │                                  │
│                   ││                                                                    │ │                                  │
│                   ││                                                                    │ │                                  │
│                   ││  [ + Add Account ]                                                 │ │                                  │
╰───────────────────╯╰────────────────────────────────────────────────────────────────────╯ ╰──────────────────────────────────╯
 ⇥ next  ⏎ apply  esc close
