crates/retiretui_tui/src/snapshots/retiretui_tui__frames__accounts_item_200x55.snap
---
source: crates/retiretui_tui/src/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          full.toml ● 
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭ Plan ─────────────╮╭ Accounts ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ ╭ Account ───────────────────────╮
│▏ Accounts       7 ││  Account              Type              Owner           Balance                                                                              │ │                                │
│  Income         4 ││▌ cash                 Cash              jordan          $40,000                                                                              │ │▏ ID               cash         │
│  Expenses       2 ││  brokerage            Brokerage         jordan         $300,000                                                                              │ │  Name                          │
│  Cliffs         0 ││  fid-401k             401(k)            jordan         $450,000                                                                              │ │  Type             Cash         │
│  Transfers      1 ││  roth-ira             IRA               jordan          $90,000                                                                              │ │  Owner            jordan       │
│  Conversions    1 ││  rollover-ira         IRA               jordan               $0                                                                              │ │  Balance          $40,000      │
│  Contributions  3 ││  hsa                  HSA               alex            $25,000                                                                              │ │  Invested         Fixed return │
│  Events         1 ││  pension-dc           414(k)            jordan          $60,000                                                                              │ │  Expected return               │
│  People         2 ││                                                                                                                                              │ │  Locked until     Never        │
│  Residency      1 ││                                                                                                                                              │ │  Drain priority                │
│  Household        ││                                                                                                                                              │ │                                │
│  Settings         ││                                                                                                                                              │ │                                │
│  Market           ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                            ╭ Edit cash ──────────────────────────────────────────────────────╮                               │ │                                │
│                   ││                                            │ID                [ cash                                       ] │                               │ │                                │
│                   ││                                            │Name              [                                            ] │                               │ │                                │
│                   ││                                            │Type              [ Cash ▾ ]                                     │                               │ │                                │
│                   ││                                            │Owner             [ jordan ▾ ]                                   │                               │ │                                │
│                   ││                                            │Balance           [ $40,000                                    ] │                               │ │                                │
│                   ││                                            │Invested          [ Fixed return ▾ ]                             │                               │ │                                │
│                   ││                                            │Expected return   █─────────────────── [                       ] │                               │ │                                │
│                   ││                                            │Locked until      [ Never ▾ ]                                    │                               │ │                                │
│                   ││                                            │Drain priority    [                                            ] │                               │ │                                │
│                   ││                                            │─────────────────────────────────────────────────────────────────│                               │ │                                │
│                   ││                                            │A short unique handle other items refer to this account by.      │                               │ │                                │
│                   ││                                            │                                                                 │                               │ │                                │
│                   ││                                            │                                                                 │                               │ │                                │
│                   ││                                            │─────────────────────────────────────────────────────────────────│                               │ │                                │
│                   ││                                            │                                            [ Discard ] [ Apply ]│                               │ │                                │
│                   ││                                            ╰─────────────────────────────────────────────────────────────────╯                               │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││                                                                                                                                              │ │                                │
│                   ││  [ + Add Account ]                                                                                                                           │ │                                │
╰───────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────╯
 ⇥ next  ⏎ apply  esc close
